header padding change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header .header-data {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 8px 0;
 }
 header .header-data h3 {
   color: #ffffff;
