--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,7 +56,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // padding: 8px 131px;
+    padding: 8px 0;
 
     h3 {
       color: $white-color;
