--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ a {
   text-decoration: none;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -265,7 +266,22 @@ header .header-data .header-right h4::before {
     font-size: 24px;
   }
 }
-.right-sidebar .yellow-btn button {
+@media (max-width: 575px) {
+  .right-sidebar .yellow-btn.profile_yellow {
+    text-align: center;
+  }
+}
+.right-sidebar .yellow-btn.profile_yellow a {
+  letter-spacing: 5px;
+  padding: 17px 38px;
+  margin-bottom: 0;
+}
+@media (max-width: 375px) {
+  .right-sidebar .yellow-btn.profile_yellow a {
+    padding: 17px 10px;
+  }
+}
+.right-sidebar .yellow-btn a {
   background-color: #fbee6c;
   padding: 17px 19px 16px 27px;
   color: #444444;
@@ -275,13 +291,18 @@ header .header-data .header-right h4::before {
   line-height: 27px;
   margin-bottom: 26px;
 }
-.right-sidebar .yellow-btn button span {
-  letter-spacing: 5px;
-}
 @media (max-width: 768px) {
-  .right-sidebar .yellow-btn button {
+  .right-sidebar .yellow-btn a {
     padding: 8px 19px 8px 27px;
   }
+}
+@media (max-width: 575px) {
+  .right-sidebar .yellow-btn a {
+    font-size: 18px;
+  }
+}
+.right-sidebar .yellow-btn span {
+  letter-spacing: 5px;
 }
 @media (max-width: 575px) {
   .right-sidebar .content {
@@ -593,9 +614,106 @@ footer .footer-data .footer-right li::after {
   background-color: #444444;
   content: "";
 }
+footer .footer-data .footer-right li:last-child::after {
+  width: 0;
+}
 
 .main-left-data:focus .main-border {
   border-color: #f6774e !important;
+}
+
+.right-sidebar .rightside-title .title_space {
+  letter-spacing: 5px;
+  margin-bottom: 24px;
+}
+.right-sidebar .profile_data {
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 29px;
+  padding: 43px 26px;
+}
+@media (max-width: 575px) {
+  .right-sidebar .profile_data {
+    padding: 33px 10px;
+  }
+}
+.right-sidebar .profile_data .account-h3 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 5px;
+  color: #31b762;
+  font-weight: 700;
+}
+.right-sidebar .profile_data .login-data {
+  margin-bottom: 39px;
+}
+@media (max-width: 575px) {
+  .right-sidebar .profile_data .login-data {
+    margin-bottom: 26px;
+  }
+}
+.right-sidebar .profile_data .login-data.mb-35 {
+  margin-bottom: 35px;
+}
+@media (max-width: 575px) {
+  .right-sidebar .profile_data .login-data.mb-35 {
+    margin-bottom: 26px;
+  }
+}
+@media (max-width: 375px) {
+  .right-sidebar .profile_data .login-data.mb-35 li {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+.right-sidebar .profile_data .login-data .dot-style {
+  padding-left: 10px;
+}
+.right-sidebar .profile_data .login-data .dot-style li {
+  position: relative;
+}
+.right-sidebar .profile_data .login-data .dot-style li::after {
+  position: absolute;
+  content: "";
+  background-color: #3A3A3A;
+  top: 10px;
+  left: -13px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+}
+.right-sidebar .profile_data .login-data li {
+  display: flex;
+  gap: 51px;
+}
+@media (max-width: 575px) {
+  .right-sidebar .profile_data .login-data li {
+    gap: 20px;
+  }
+}
+.right-sidebar .profile_data .login-data li h4 {
+  margin-bottom: 15px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #3A3A3A;
+}
+@media (max-width: 575px) {
+  .right-sidebar .profile_data .login-data li h4 {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+@media (max-width: 375px) {
+  .right-sidebar .profile_data .login-data li h4 {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+.latter_space {
+  letter-spacing: 5px;
+  color: #787878;
 }
 
 /*# sourceMappingURL=style.css.map */
