--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,14 +4,13 @@ $text-color: #f7f6f6;
 $white-color: #ffffff;
 $green-color: #31b762;
 
-$xlll:1440px;
-$xll:1199px;
-$xl: 1024px; 
-$lg: 992px; 
+$xlll: 1440px;
+$xll: 1199px;
+$xl: 1024px;
+$lg: 992px;
 $med: 768px;
 $sm: 575px;
 $xs: 375px;
-
 
 body {
   font-family: $font-stack;
@@ -25,8 +24,9 @@ ul {
 a {
   text-decoration: none;
 }
-html ,body{
-    overflow-x: hidden;
+html,
+body {
+  overflow-x: hidden;
 }
 
 @mixin pseudo-element($position, $top, $side, $color, $width, $height) {
@@ -115,17 +115,17 @@ header {
     gap: 100px;
 
     @media (max-width: #{$xll}) {
-       flex-direction: column;
-        gap: 0px;
+      flex-direction: column;
+      gap: 0px;
+    }
+    .logo-img {
+      @media (max-width: #{$xll}) {
+        margin-bottom: 30px;
       }
-.logo-img{
-    @media (max-width: #{$xll}) {
-      margin-bottom: 30px;
+      @media (max-width: #{$sm}) {
+        width: 200px;
       }
-    @media (max-width: #{$sm}) {
-      width: 200px;
-      }
-}
+    }
     .main-tab-box {
       display: flex;
       gap: 23px;
@@ -151,12 +151,12 @@ header {
           left: 0;
           margin: 5px 6px;
           padding: 19px 55px;
-          &:hover{
+          &:hover {
             cursor: pointer;
           }
-           &:focus{
+          &:focus {
             border-color: #f6774e !important;
-           }
+          }
           h3 {
             font-size: 20px;
             line-height: 28px;
@@ -184,8 +184,8 @@ header {
     gap: 24px;
 
     @media (max-width: #{$med}) {
-        flex-direction: column;
-      }
+      flex-direction: column;
+    }
   }
 }
 .left-sidebar {
@@ -202,14 +202,14 @@ header {
     padding-top: 81px;
     margin: 0 10px 0 13px;
     @media (max-width: #{$med}) {
-        padding-top:20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
+      padding-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     @media (max-width: #{$sm}) {
-        flex-wrap: wrap;
-      }
+      flex-wrap: wrap;
+    }
     li {
       @include latter-space();
       border-bottom: 2px solid $white-color;
@@ -217,15 +217,15 @@ header {
       padding-left: 20px;
       margin-bottom: 16px;
       width: 100%;
-        @media (max-width: #{$med}) {
-            width: max-content;
-            margin-left: 10px;
-            margin-right: 10px;
-            padding-left: 0;
-          }
-          .no-space{
-            letter-spacing: 0;
-            }
+      @media (max-width: #{$med}) {
+        width: max-content;
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-left: 0;
+      }
+      .no-space {
+        letter-spacing: 0;
+      }
       a {
         color: $white-color !important;
         font-size: 16px;
@@ -234,8 +234,8 @@ header {
         // &:focus {
         //   color: #fbee6c !important;
         // }
-        &.active{
-            color: #fbee6c !important; 
+        &.active {
+          color: #fbee6c !important;
         }
       }
     }
@@ -245,10 +245,10 @@ header {
   width: 69%;
 
   @media (max-width: #{$xlll}) {
-  width: 79%;
+    width: 79%;
   }
   @media (max-width: #{$xl}) {
-  width: 73%;
+    width: 73%;
   }
 
   @media (max-width: #{$med}) {
@@ -257,9 +257,9 @@ header {
   }
   .rightside-title {
     @media (max-width: #{$sm}) {
-        display: flex;
-        justify-content: center;
-      }
+      display: flex;
+      justify-content: center;
+    }
     h2 {
       font-size: 30px;
       line-height: 40px;
@@ -277,7 +277,6 @@ header {
         content: "";
         width: 12px;
         height: 25px;
-    
       }
 
       @media (max-width: #{$med}) {
@@ -285,26 +284,46 @@ header {
       }
     }
   }
-  .yellow-btn button {
-    background-color: #fbee6c;
-    padding: 17px 19px 16px 27px;
-    color: #444444;
-    border-radius: 20px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 27px;
-    margin-bottom: 26px;
+  .yellow-btn {
+    &.profile_yellow{
+      @media (max-width: #{$sm}) {
+        text-align: center;
+      }
+      a{
+        @include latter-space();
+        padding: 17px 38px;
+        margin-bottom: 0;
+        @media (max-width: #{$xs}) {
+          padding: 17px 10px;
+        }
+      }
+    } 
+    a {
+      background-color: #fbee6c;
+      padding: 17px 19px 16px 27px;
+      color: #444444;
+      border-radius: 20px;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 27px;
+      margin-bottom: 26px;
+      @media (max-width: #{$med}) {
+        padding: 8px 19px 8px 27px;
+      }
+      @media (max-width: #{$sm}) {
+        font-size: 18px;
+      }
+  }
+    
     span {
       @include latter-space();
     }
-    @media (max-width: #{$med}) {
-        padding: 8px 19px 8px 27px;
-      }
+  
   }
   .content {
     @media (max-width: #{$sm}) {
-        text-align: center;
-      }
+      text-align: center;
+    }
     h4 {
       font-size: 18px;
       line-height: 24px;
@@ -327,12 +346,12 @@ header {
     margin-bottom: 53px;
 
     @media (max-width: #{$sm}) {
-        gap: 11px;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 24px;
-      }
+      gap: 11px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 24px;
+    }
     .box {
       width: 246px;
       height: 135px;
@@ -357,8 +376,8 @@ header {
         font-size: 46px;
         color: $white-color;
         @media (max-width: #{$med}) {
-            font-size: 33px;
-          }
+          font-size: 33px;
+        }
       }
       h3 {
         font-size: 28px;
@@ -368,13 +387,13 @@ header {
         margin-bottom: 0;
 
         @media (max-width: #{$med}) {
-            font-size: 20px;
-          }
+          font-size: 20px;
+        }
       }
 
       @media (max-width: #{$xl}) {
         width: 233px;
-    height: 119px;
+        height: 119px;
       }
     }
   }
@@ -385,11 +404,11 @@ header {
     align-items: center;
 
     @media (max-width: #{$xll}) {
-       flex-wrap: wrap;
-      }
+      flex-wrap: wrap;
+    }
     @media (max-width: #{$sm}) {
       justify-content: center;
-      }
+    }
 
     .watch-history .watch-history-h3 {
       color: #31b762;
@@ -401,15 +420,15 @@ header {
 
       @media (max-width: #{$med}) {
         margin-bottom: 10px;
-       }
+      }
     }
     .hours-div {
       display: flex;
       gap: 10px;
       align-items: center;
       @media (max-width: #{$med}) {
-       flex-wrap: wrap;
-       justify-content: center;
+        flex-wrap: wrap;
+        justify-content: center;
       }
       h2 {
         font-size: 18px;
@@ -437,9 +456,9 @@ header {
     margin-bottom: 26px;
 
     @media (max-width: #{$sm}) {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
+      flex-wrap: wrap;
+      justify-content: center;
+    }
     h3,
     span {
       font-size: 18px;
@@ -468,7 +487,6 @@ header {
   }
   .table-data {
     .table {
- 
       thead {
         tr {
           th {
@@ -486,15 +504,14 @@ header {
           line-height: 24px;
           font-weight: 500;
           color: #3a3a3a;
-          
         }
-        .min-td{
-            @media (max-width: #{$xl}) {
-                min-width: 250px;
-              }
-            @media (max-width: #{$xl}) {
-                min-width: 194px;
-              }
+        .min-td {
+          @media (max-width: #{$xl}) {
+            min-width: 250px;
+          }
+          @media (max-width: #{$xl}) {
+            min-width: 194px;
+          }
         }
         .custom-checkbox {
           position: relative;
@@ -557,38 +574,38 @@ footer {
     justify-content: space-between;
 
     @media (max-width: #{$med}) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .copy-right {
       font-size: 14px;
       line-height: 20px;
       font-weight: 400;
       color: #444444;
       margin-bottom: 0;
-      
+
       @media (max-width: #{$xlll}) {
         padding-left: 170px;
-        }
+      }
       @media (max-width: #{$xl}) {
         padding-left: 193px;
-        }
+      }
       @media (max-width: #{$lg}) {
         padding-left: 0;
-        }
+      }
       @media (max-width: #{$sm}) {
-       margin-bottom: 10px;
-        }
+        margin-bottom: 10px;
+      }
     }
     .footer-right {
       display: flex;
       gap: 15px;
 
       @media (max-width: #{$sm}) {
-       flex-wrap: wrap;
-       justify-content: center;
-       }
+        flex-wrap: wrap;
+        justify-content: center;
+      }
       li {
         font-size: 14px;
         line-height: 20px;
@@ -605,10 +622,106 @@ footer {
           background-color: #444444;
           content: "";
         }
+        &:last-child::after{
+          width: 0;
+        }
       }
     }
   }
 }
 .main-left-data:focus .main-border {
   border-color: #f6774e !important;
+}
+
+// ----index page end-------
+
+// -----profile_edit page start----------
+
+.right-sidebar {
+  .rightside-title {
+    .title_space {
+      @include latter-space();
+      margin-bottom: 24px;
+    }
+  }
+  .profile_data {
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 29px;
+    padding: 43px 26px;
+    @media (max-width: #{$sm}) {
+      padding: 33px 10px;
+    }
+
+    .account-h3{
+margin-bottom: 15px;font-size: 18px;
+line-height: 24px;
+@include latter-space();
+color: $green-color;
+font-weight: 700;
+    }
+    .login-data   {
+      margin-bottom: 39px;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 26px;
+      }
+      
+      &.mb-35{
+        margin-bottom: 35px;
+        @media (max-width: #{$sm}) {
+          margin-bottom: 26px;
+        }
+        li{
+          @media (max-width: #{$xs}) {
+           flex-direction: column;
+           gap: 10px;
+          }
+        }
+      }
+     .dot-style{
+      padding-left: 10px;
+     li{
+      position: relative;
+      &::after{
+        position: absolute;
+        content: "";
+        background-color: #3A3A3A;
+        top: 10px;
+        left: -13px;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+      }
+     }
+     }
+      li{
+       display: flex;
+       gap:51px;
+       @media (max-width: #{$sm}) {
+        gap: 20px;
+      }
+       h4{
+         margin-bottom: 15px;
+        font-weight: 500;
+        font-size: 18px;
+        // @include latter-space();
+        line-height: 24px;
+        color: 
+        #3A3A3A;
+
+        @media (max-width: #{$sm}) {
+          font-size: 16px;
+          line-height: 18px;
+        }
+        @media (max-width: #{$xs}) {
+          font-size: 14px;
+          line-height: 16px;
+        }
+       }
+     }
+    }
+  }
+}
+.latter_space{
+  @include latter-space();
+  color: #787878;
 }
