profile width fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -648,6 +648,13 @@ footer {
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
     border-radius: 29px;
     padding: 43px 26px;
+    width: 86%;
+    @media (max-width: #{$xlll}) {
+      width: 73%;
+    }
+    @media (max-width: #{$med}) {
+      width: 100%;
+    }
     @media (max-width: #{$sm}) {
       padding: 33px 10px;
     }
