--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,6 +630,17 @@ footer .footer-data .footer-right li:last-child::after {
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   border-radius: 29px;
   padding: 43px 26px;
+  width: 86%;
+}
+@media (max-width: 1440px) {
+  .right-sidebar .profile_data {
+    width: 73%;
+  }
+}
+@media (max-width: 768px) {
+  .right-sidebar .profile_data {
+    width: 100%;
+  }
 }
 @media (max-width: 575px) {
   .right-sidebar .profile_data {
