--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ header .header-data .header-right h4::before {
 .main .main-data {
   display: flex;
   align-items: center;
-  gap: 100px;
+  gap: 99px;
 }
 @media (max-width: 1199px) {
   .main .main-data {
@@ -162,7 +162,7 @@ header .header-data .header-right h4::before {
   width: 208px;
   height: 120vh;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1440px) {
   .left-sidebar {
     height: auto;
   }
@@ -222,11 +222,6 @@ header .header-data .header-right h4::before {
   width: 68%;
 }
 @media (max-width: 1440px) {
-  .right-sidebar {
-    width: 79%;
-  }
-}
-@media (max-width: 1024px) {
   .right-sidebar {
     width: 73%;
   }
@@ -703,7 +698,7 @@ footer .footer-data .footer-right li:last-child::after {
 .right-sidebar .profile_data .login-data .dot-style li::after {
   position: absolute;
   content: "";
-  background-color: #3A3A3A;
+  background-color: #3a3a3a;
   top: 10px;
   left: -13px;
   width: 4px;
@@ -724,7 +719,7 @@ footer .footer-data .footer-right li:last-child::after {
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
-  color: #3A3A3A;
+  color: #3a3a3a;
 }
 @media (max-width: 575px) {
   .right-sidebar .profile_data .login-data li h4 {
@@ -742,6 +737,125 @@ footer .footer-data .footer-right li:last-child::after {
 .latter_space {
   letter-spacing: 5px;
   color: #787878;
+}
+
+.right-sidebar.msg_rightside {
+  width: 82%;
+}
+@media (max-width: 1024px) {
+  .right-sidebar.msg_rightside {
+    width: 73%;
+  }
+}
+@media (max-width: 768px) {
+  .right-sidebar.msg_rightside {
+    width: 100%;
+  }
+}
+.right-sidebar .message-data .grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px;
+}
+@media (max-width: 1024px) {
+  .right-sidebar .message-data .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 575px) {
+  .right-sidebar .message-data .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.right-sidebar .message-data .message-content {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  margin-bottom: 3px;
+  height: 100%;
+}
+.right-sidebar .message-data .message-content .msg-title {
+  padding: 12px 13px;
+}
+.right-sidebar .message-data .message-content .msg-title .round-dot {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #787878;
+}
+.right-sidebar .message-data .message-content .msg-title .round-dot.active {
+  background-color: #DD2B2B;
+}
+.right-sidebar .message-data .message-content .msg-title h4 {
+  color: #787878;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+.right-sidebar .message-data .message-content .msg-img {
+  padding: 0 9px 12px 9px;
+}
+.right-sidebar .message-data .message-content .msg-img img {
+  width: 100%;
+  object-fit: cover;
+}
+.right-sidebar .message-data .message-content .msg-data {
+  padding: 0 9px;
+}
+@media (max-width: 1199px) {
+  .right-sidebar .message-data .message-content .msg-data .msg-h-title {
+    height: 61px;
+  }
+}
+@media (max-width: 575px) {
+  .right-sidebar .message-data .message-content .msg-data .msg-h-title {
+    height: 50px;
+  }
+}
+.right-sidebar .message-data .message-content .msg-data .msg-h-title h3 {
+  margin-bottom: 11px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 700;
+  color: #3A3A3A;
+}
+@media (max-width: 575px) {
+  .right-sidebar .message-data .message-content .msg-data .msg-h-title h3 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+.right-sidebar .message-data .message-content .msg-data p {
+  color: #787878;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+@media (max-width: 575px) {
+  .right-sidebar .message-data .message-content .msg-data p {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+.right-sidebar .message-data .message-content .msg-btn button {
+  padding: 14px 0;
+  background-color: #31b762;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 700;
+  width: 100%;
+  color: #ffffff !important;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+@media (max-width: 575px) {
+  .right-sidebar .message-data .message-content .msg-btn button {
+    padding: 10px 0;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
