--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ header {
     display: flex;
     align-items: center;
     // justify-content: space-evenly;
-    gap: 100px;
+    gap: 99px;
 
     @media (max-width: #{$xll}) {
       flex-direction: column;
@@ -193,7 +193,7 @@ header {
   background-color: $primary-color;
   width: 208px;
   height: 120vh;
-  @media (max-width: #{$xl}) {
+  @media (max-width: #{$xlll}) {
     height: auto;
   }
   @media (max-width: #{$med}) {
@@ -246,9 +246,6 @@ header {
   width: 68%;
 
   @media (max-width: #{$xlll}) {
-    width: 79%;
-  }
-  @media (max-width: #{$xl}) {
     width: 73%;
   }
 
@@ -286,11 +283,11 @@ header {
     }
   }
   .yellow-btn {
-    &.profile_yellow{
+    &.profile_yellow {
       @media (max-width: #{$sm}) {
         text-align: center;
       }
-      a{
+      a {
         @include latter-space();
         padding: 17px 38px;
         margin-bottom: 0;
@@ -298,7 +295,7 @@ header {
           padding: 17px 10px;
         }
       }
-    } 
+    }
     a {
       background-color: #fbee6c;
       padding: 17px 19px 16px 27px;
@@ -322,13 +319,11 @@ header {
         font-size: 14px;
         line-height: 16px;
       }
-      
-  }
-    
+    }
+
     span {
       @include latter-space();
     }
-  
   }
   .content {
     @media (max-width: #{$sm}) {
@@ -632,7 +627,7 @@ footer {
           background-color: #444444;
           content: "";
         }
-        &:last-child::after{
+        &:last-child::after {
           width: 0;
         }
       }
@@ -669,14 +664,15 @@ footer {
       padding: 33px 26px;
     }
 
-    .account-h3{
-margin-bottom: 15px;font-size: 18px;
-line-height: 24px;
-@include latter-space();
-color: $green-color;
-font-weight: 700;
+    .account-h3 {
+      margin-bottom: 15px;
+      font-size: 18px;
+      line-height: 24px;
+      @include latter-space();
+      color: $green-color;
+      font-weight: 700;
     }
-    .login-data   {
+    .login-data {
       margin-bottom: 39px;
       @media (max-width: #{$sm}) {
         margin-bottom: 26px;
@@ -684,68 +680,179 @@ font-weight: 700;
       @media (max-width: #{$xss}) {
         margin-bottom: 16px;
       }
-      &.mb-35{
+      &.mb-35 {
         margin-bottom: 35px;
         @media (max-width: #{$sm}) {
           margin-bottom: 26px;
         }
-        li{
+        li {
           @media (max-width: #{$sm}) {
-           flex-direction: column;
-           gap: 6px;
+            flex-direction: column;
+            gap: 6px;
           }
         }
       }
-     .dot-style{
-      padding-left: 10px;
-     li{
-      position: relative;
-      &::after{
-        position: absolute;
-        content: "";
-        background-color: #3A3A3A;
-        top: 10px;
-        left: -13px;
-        width: 4px;
-        height: 4px;
-        border-radius: 50%;
+      .dot-style {
+        padding-left: 10px;
+        li {
+          position: relative;
+          &::after {
+            position: absolute;
+            content: "";
+            background-color: #3a3a3a;
+            top: 10px;
+            left: -13px;
+            width: 4px;
+            height: 4px;
+            border-radius: 50%;
+          }
+        }
       }
-     }
-     }
-      li{
-       display: flex;
-       gap:51px;
-       @media (max-width: #{$sm}) {
-        gap: 20px;
-      }
-       h4{
-         margin-bottom: 15px;
-        font-weight: 500;
-        font-size: 18px;
-        // @include latter-space();
-        line-height: 24px;
-        color: 
-        #3A3A3A;
-
+      li {
+        display: flex;
+        gap: 51px;
         @media (max-width: #{$sm}) {
-          font-size: 14px;
-          line-height: 16px;
+          gap: 20px;
         }
-        @media (max-width: #{$xss}) {
-          font-size: 12px;
-          line-height: 14px;
+        h4 {
+          margin-bottom: 15px;
+          font-weight: 500;
+          font-size: 18px;
+          // @include latter-space();
+          line-height: 24px;
+          color: #3a3a3a;
+
+          @media (max-width: #{$sm}) {
+            font-size: 14px;
+            line-height: 16px;
+          }
+          @media (max-width: #{$xss}) {
+            font-size: 12px;
+            line-height: 14px;
+          }
         }
-        
-        // @media (max-width: #{$xs}) {
-        //   font-size: 14px;
-        //   line-height: 16px;
-        // }
-       }
-     }
+      }
     }
   }
 }
-.latter_space{
+.latter_space {
   @include latter-space();
   color: #787878;
+}
+// -----profile_edit end----
+
+// --cast message start----
+
+.right-sidebar {
+  &.msg_rightside{
+    width: 82%;
+    @media (max-width: #{$xl}) {
+      width: 73%;
+        }
+    @media (max-width: #{$med}) {
+      width: 100%;
+        }
+  }
+  .message-data {
+    .grid{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 25px;
+
+       @media (max-width: #{$xl}) {
+        grid-template-columns: repeat(2, 1fr);
+          }
+       @media (max-width: #{$sm}) {
+        grid-template-columns: repeat(1, 1fr);
+          }
+    }
+    .message-content {
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+      background-color: #f4f4f4;
+      border-radius: 10px;
+      margin-bottom: 3px;
+      height: 100%;
+      .msg-title{
+        padding: 12px 13px;
+       .round-dot{
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        background-color: #787878;
+        &.active{
+          background-color: #DD2B2B;
+        }
+       }
+       h4{
+        color: 
+        #787878;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 28px;
+        margin-bottom: 0;
+       }
+      }
+
+      .msg-img{
+        padding: 0 9px 12px 9px;
+        img{
+          width: 100%;
+          object-fit: cover;
+        }
+      }
+      .msg-data{
+        padding: 0 9px;
+        .msg-h-title{
+          @media (max-width: #{$xll}) {
+            height: 61px;
+              }
+          @media (max-width: #{$sm}) {
+            height: 50px;
+              }
+          h3{
+            margin-bottom: 11px;
+            font-size: 18px;
+            line-height: 25px;
+            font-weight: 700;
+            color: 
+            #3A3A3A;
+
+            @media (max-width: #{$sm}) {
+              font-size: 16px;
+              line-height: 20px;
+                }
+          }
+        }
+        p{
+          color: #787878;
+          font-size: 18px;
+          line-height: 25px;
+          font-weight: 400;
+          margin-bottom: 15px;
+          @media (max-width: #{$sm}) {
+            font-size: 16px;
+            line-height: 20px;
+              }
+        }
+      }
+      .msg-btn{
+        button{
+          padding: 14px 0;
+          background-color: $green-color;
+          font-size: 18px;
+          line-height: 25px;
+          font-weight: 700;
+          width: 100%;
+          color: $white-color !important;
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+          @media (max-width: #{$sm}) {
+            padding: 10px 0;
+            font-size: 16px;
+            line-height: 20px;
+              }
+        }
+      }
+    }
+  }
 }
