--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,7 @@ header .header-data .header-right h4::before {
 }
 .left-sidebar.msg_leftside {
   height: auto;
+  margin-bottom: -10px;
 }
 .left-sidebar .left-sidelist {
   padding-top: 81px;
