--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,7 +29,9 @@ html,
 body {
   overflow-x: hidden;
 }
-
+img{
+ max-width: 100%;
+}
 @mixin pseudo-element($position, $top, $side, $color, $width, $height) {
   position: absolute;
   top: $top;
@@ -589,6 +591,7 @@ footer {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      gap: 7px;
     }
     .copy-right {
       font-size: 14px;
@@ -863,6 +866,185 @@ footer {
               }
         }
       }
+    }
+  }
+}
+// --dashboardcast messsage -end---
+
+// ---dashboardcast message detail----start
+
+.message-detail{
+  margin: 0 90px;
+  @media (max-width: #{$lg}) {
+    margin: 0 60px;
+      }
+  @media (max-width: #{$med}) {
+    margin: 0 40px;
+  }
+  @media (max-width: #{$sm}) {
+    padding: 0 10px;
+    margin: 0;
+      }
+  .detail-title{
+    h2{
+      @include latter-space();
+      font-size: 30px;
+      line-height: 40px;
+      font-weight: 600;
+      color: #444444;
+      position: relative;
+      margin-bottom: 21px;
+
+      @media (max-width: #{$xll}) {
+        padding-left: 4px;
+        font-size: 24px;
+        line-height: 28px;
+          }
+      @media (max-width: #{$med}) {
+        padding-left: 13px;
+        font-size: 16px;
+          }
+      @media (max-width: #{$xss}) {
+        padding-left: 13px;
+        font-size: 14px;
+          }
+      &:after{
+        position: absolute;
+        top: 7px;
+        left: 0;
+        background-color: $green-color;
+        content: "";
+        width: 12px;
+        height: 25px;
+        @media (max-width: #{$xll}) {
+          top: 2px;
+            }
+      }
+    }
+  }
+  .detail-back{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 25px;
+    span,i{
+      font-size: 18px;
+      line-height: 24px;
+      @include latter-space();
+      color: #6C6C6C;
+      font-weight: 700;
+      @media (max-width: #{$xss}) {
+        font-size: 16px;
+          } 
+    }
+  }
+  .detail-data{
+    box-shadow:  2px 2px 10px 0  rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    padding: 34px 76px 75px 76px;
+    margin-bottom: 145px;
+
+    @media (max-width: #{$xl}) {
+      padding: 34px 52px 75px 52px;
+      margin-bottom: 105px;
+        }
+
+    @media (max-width: #{$sm}) {
+              padding: 24px 24px 33px 24px;
+        }
+    .detail-data-title {
+      h3{
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 30px;
+      @include latter-space();
+      color: 
+      #46464E;
+      margin-bottom: 13px;
+      @media (max-width: #{$xss}) {
+        font-size: 14px;
+          }
+      }
+      h2{
+        color: 
+        #008BD5;
+        font-size: 22px;
+        line-height: 30px;
+        font-weight: 700;
+        margin-bottom: 32px;
+        @media (max-width: #{$sm}) {
+          font-size: 18px;
+          margin-bottom: 20px;
+    }
+    @media (max-width: #{$xss}) {
+      font-size: 16px;
+        }
+      }
+    }
+    .detail-data-img{
+      margin-bottom: 35px;
+      @media (max-width: #{$sm}) {
+    margin-bottom: 28px;
+  }
+    }
+    .detail-data-content{
+      p{
+        letter-spacing: 2px;
+        font-size: 16px;
+        line-height: 30px;
+        color: 
+        #787878;
+        font-weight: 400;
+        margin-bottom: 11px;
+        &:last-child{
+          margin-bottom: 25px;
+          @media (max-width: #{$sm}) {
+            margin-bottom: 16px;
+      }
+        }
+        @media (max-width: #{$sm}) {
+          line-height: 24px;
+          font-size: 14px;
+       }
+      }
+    }
+    .detail-data-list{
+  h3{
+    color: $green-color;
+    letter-spacing: 2px;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 700;
+  }
+  ul{
+    margin-bottom: 30px;
+    @media (max-width: #{$sm}) {
+     margin-bottom: 16px;
+}
+    li{
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 400;
+      color: 
+      #46464E;
+      letter-spacing: 2px;
+      @media (max-width: #{$sm}) {
+        font-size: 14px;
+        line-height: 26px;
+   }
+    }
+  }
+  p{
+    &:last-child{
+      width: 100%;
+      max-width: 780px;
+    }
+    &:nth-child(2){
+      width: 100%;
+      max-width: 440px;
+      margin-bottom: 0;
+    }
+  }
     }
   }
 }
