--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -958,6 +958,7 @@ footer {
         font-weight: 400;
         line-height: 30px;
       @include latter-space();
+     
       color: 
       #46464E;
       margin-bottom: 13px;
@@ -972,6 +973,18 @@ footer {
         line-height: 30px;
         font-weight: 700;
         margin-bottom: 32px;
+        position: relative;
+        width: max-content;
+
+        &::after{
+          position: absolute;
+          content: "";
+          background-color: #008BD5;
+          width:100%;
+          height: 2px;
+          bottom: -7px;
+          left: 0;
+        }
         @media (max-width: #{$sm}) {
           font-size: 18px;
           margin-bottom: 20px;
