--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -974,7 +974,7 @@ footer {
         font-weight: 700;
         margin-bottom: 32px;
         position: relative;
-        width: max-content;
+        // width: max-content;
 
         &::after{
           position: absolute;
