--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -993,15 +993,7 @@ footer .footer-data .footer-right li:last-child::after {
   font-weight: 700;
   margin-bottom: 32px;
   position: relative;
-}
-.message-detail .detail-data .detail-data-title h2::after {
-  position: absolute;
-  content: "";
-  background-color: #008BD5;
-  width: 100%;
-  height: 2px;
-  bottom: -7px;
-  left: 0;
+  text-decoration: underline;
 }
 @media (max-width: 575px) {
   .message-detail .detail-data .detail-data-title h2 {
