--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -975,16 +975,17 @@ footer {
         margin-bottom: 32px;
         position: relative;
         // width: max-content;
+        text-decoration: underline;
 
-        &::after{
-          position: absolute;
-          content: "";
-          background-color: #008BD5;
-          width:100%;
-          height: 2px;
-          bottom: -7px;
-          left: 0;
-        }
+        // &::after{
+        //   position: absolute;
+        //   content: "";
+        //   background-color: #008BD5;
+        //   width:100%;
+        //   height: 2px;
+        //   bottom: -7px;
+        //   left: 0;
+        // }
         @media (max-width: #{$sm}) {
           font-size: 18px;
           margin-bottom: 20px;
