--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -973,19 +973,9 @@ footer {
         line-height: 30px;
         font-weight: 700;
         margin-bottom: 32px;
-        position: relative;
-        // width: max-content;
         text-decoration: underline;
+        text-underline-offset: 10px;
 
-        // &::after{
-        //   position: absolute;
-        //   content: "";
-        //   background-color: #008BD5;
-        //   width:100%;
-        //   height: 2px;
-        //   bottom: -7px;
-        //   left: 0;
-        // }
         @media (max-width: #{$sm}) {
           font-size: 18px;
           margin-bottom: 20px;
@@ -997,8 +987,12 @@ footer {
     }
     .detail-data-img{
       margin-bottom: 35px;
+     
       @media (max-width: #{$sm}) {
     margin-bottom: 28px;
+  }
+  img{
+    width: 100%;
   }
     }
     .detail-data-content{
@@ -1041,7 +1035,7 @@ footer {
       font-weight: 400;
       color: 
       #46464E;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
       @media (max-width: #{$sm}) {
         font-size: 14px;
         line-height: 26px;
