--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,11 @@ header .header-data .header-right h4::before {
     justify-content: center;
   }
 }
+@media (max-width: 768px) {
+  .right-sidebar .rightside-title.quotation-title {
+    flex-direction: column;
+  }
+}
 .right-sidebar .rightside-title h2 {
   font-size: 30px;
   line-height: 40px;
@@ -259,6 +264,12 @@ header .header-data .header-right h4::before {
   position: relative;
   padding-left: 20px;
   margin-bottom: 13px;
+}
+@media (max-width: 992px) {
+  .right-sidebar .rightside-title h2 {
+    font-size: 24px;
+    line-height: 28px;
+  }
 }
 .right-sidebar .rightside-title h2::after {
   position: absolute;
@@ -803,7 +814,7 @@ footer .footer-data .footer-right li:last-child::after {
   background-color: #787878;
 }
 .right-sidebar .message-data .message-content .msg-title .round-dot.active {
-  background-color: #DD2B2B;
+  background-color: #dd2b2b;
 }
 .right-sidebar .message-data .message-content .msg-title h4 {
   color: #787878;
@@ -837,7 +848,7 @@ footer .footer-data .footer-right li:last-child::after {
   font-size: 18px;
   line-height: 25px;
   font-weight: 700;
-  color: #3A3A3A;
+  color: #3a3a3a;
 }
 @media (max-width: 575px) {
   .right-sidebar .message-data .message-content .msg-data .msg-h-title h3 {
@@ -944,15 +955,17 @@ footer .footer-data .footer-right li:last-child::after {
   gap: 8px;
   margin-bottom: 25px;
 }
-.message-detail .detail-back span, .message-detail .detail-back i {
+.message-detail .detail-back span,
+.message-detail .detail-back i {
   font-size: 18px;
   line-height: 24px;
   letter-spacing: 5px;
-  color: #6C6C6C;
+  color: #6c6c6c;
   font-weight: 700;
 }
 @media (max-width: 320px) {
-  .message-detail .detail-back span, .message-detail .detail-back i {
+  .message-detail .detail-back span,
+  .message-detail .detail-back i {
     font-size: 16px;
   }
 }
@@ -978,7 +991,7 @@ footer .footer-data .footer-right li:last-child::after {
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 5px;
-  color: #46464E;
+  color: #46464e;
   margin-bottom: 13px;
 }
 @media (max-width: 320px) {
@@ -987,7 +1000,7 @@ footer .footer-data .footer-right li:last-child::after {
   }
 }
 .message-detail .detail-data .detail-data-title h2 {
-  color: #008BD5;
+  color: #008bd5;
   font-size: 22px;
   line-height: 30px;
   font-weight: 700;
@@ -1058,7 +1071,7 @@ footer .footer-data .footer-right li:last-child::after {
   font-size: 16px;
   line-height: 30px;
   font-weight: 400;
-  color: #46464E;
+  color: #46464e;
   letter-spacing: 1px;
 }
 @media (max-width: 575px) {
@@ -1075,6 +1088,216 @@ footer .footer-data .footer-right li:last-child::after {
   width: 100%;
   max-width: 440px;
   margin-bottom: 0;
+}
+
+.right-sidebar.quotation-main {
+  width: 88%;
+  padding-right: 20px;
+}
+@media (max-width: 1299px) {
+  .right-sidebar.quotation-main {
+    width: 81%;
+  }
+}
+@media (max-width: 992px) {
+  .right-sidebar.quotation-main {
+    width: 76%;
+  }
+}
+@media (max-width: 991px) {
+  .right-sidebar.quotation-main {
+    width: 74%;
+  }
+}
+@media (max-width: 768px) {
+  .right-sidebar.quotation-main {
+    width: 100%;
+  }
+}
+.right-sidebar.quotation-main .rightside-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 33px;
+}
+.right-sidebar.quotation-main .rightside-title form {
+  position: relative;
+}
+.right-sidebar.quotation-main .rightside-title form input {
+  border: 1px solid #31b762;
+  border-radius: 30px;
+  width: 475px;
+  height: 54px;
+  position: relative;
+}
+@media (max-width: 575px) {
+  .right-sidebar.quotation-main .rightside-title form input {
+    width: 374px;
+  }
+}
+@media (max-width: 375px) {
+  .right-sidebar.quotation-main .rightside-title form input {
+    width: 300px;
+  }
+}
+.right-sidebar.quotation-main .rightside-title form input::placeholder {
+  color: #a1a1a1;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 500;
+  padding-left: 31px;
+}
+@media (max-width: 575px) {
+  .right-sidebar.quotation-main .rightside-title form input::placeholder {
+    padding-left: 10px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .right-sidebar.quotation-main .rightside-title form input::placeholder {
+    width: 200px;
+  }
+}
+.right-sidebar.quotation-main .rightside-title form span {
+  position: absolute;
+  right: 21px;
+  top: 12px;
+}
+@media (max-width: 575px) {
+  .right-sidebar.quotation-main .rightside-title form span img {
+    width: 30px;
+  }
+}
+
+.quotation-tab {
+  display: flex;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.quotation-tab .orange-tab {
+  background-color: #f28d30;
+  width: 100%;
+  padding: 13px 0 14px 0;
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 5px;
+  font-weight: 700;
+  border-top-left-radius: 45px;
+}
+@media (max-width: 575px) {
+  .quotation-tab .orange-tab {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+.quotation-tab .gray-tab {
+  background-color: #909090;
+  border-top-right-radius: 45px;
+  width: 100%;
+  padding: 13px 0 14px 0;
+  color: #ffffff;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 5px;
+  font-weight: 700;
+  position: relative;
+}
+@media (max-width: 575px) {
+  .quotation-tab .gray-tab {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+.quotation-tab .gray-tab:after {
+  position: absolute;
+  content: "";
+  top: 5px;
+  left: 2px;
+  width: 3px;
+  height: 80%;
+  background-color: #ffffff;
+}
+
+.quotation-table table {
+  width: 100%;
+  margin-bottom: 49px;
+}
+.quotation-table table thead tr th {
+  background-color: #31b762;
+  color: #ffffff;
+  padding: 15px 10px 17px 10px;
+}
+.quotation-table table thead tr th:first-child {
+  padding-left: 20px;
+}
+.quotation-table table tbody td {
+  padding: 14px 10px;
+  min-width: 148px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  vertical-align: middle;
+}
+@media (max-width: 575px) {
+  .quotation-table table tbody td {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+.quotation-table table tbody td:first-child {
+  padding-left: 20px;
+}
+.quotation-table table tbody td:nth-child(3) {
+  min-width: 280px;
+  width: 17%;
+}
+.quotation-table table tbody td:nth-child(4) {
+  width: 190px;
+}
+.quotation-table table tbody td:last-child {
+  min-width: 200px;
+}
+.quotation-table table tbody td .action-td {
+  display: flex;
+  gap: 31px;
+}
+.quotation-table table tbody td .state-td {
+  width: 135px;
+  height: 31px;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+}
+.quotation-table table tbody td .state-td.orange-btn {
+  background-color: #e4663e;
+}
+.quotation-table table tbody td .state-td.puprple-btn {
+  background-color: #b44fb0;
+}
+
+.table-pagination {
+  text-align: end;
+}
+.table-pagination ul {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 11px;
+}
+.table-pagination ul li {
+  color: #444444;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+}
+.table-pagination ul li.active {
+  color: #f6774e;
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 /*# sourceMappingURL=style.css.map */
